--- a/epcis/src/main/resources/io/openepcis/model/epcis/jaxb.properties
+++ b/epcis/src/main/resources/io/openepcis/model/epcis/jaxb.properties
@@ -15,3 +15,4 @@
 #
 
 jakarta.xml.bind.context.factory=org.eclipse.persistence.jaxb.JAXBContextFactory
+javax.xml.bind.context.factory=org.eclipse.persistence.jaxb.JAXBContextFactory
