--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,9 +22,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.openepcis</groupId>
-        <artifactId>openepcis-bom</artifactId>
+        <artifactId>openepcis-model-build</artifactId>
         <version>0.9.2-SNAPSHOT</version>
-        <relativePath></relativePath>
     </parent>
 
     <artifactId>openepcis-model-core</artifactId>
@@ -58,6 +57,10 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
