--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,13 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.openepcis</groupId>
-    <version>0.9.2-SNAPSHOT</version>
+    <parent>
+        <groupId>io.openepcis</groupId>
+        <artifactId>openepcis-bom</artifactId>
+        <version>0.9.2-SNAPSHOT</version>
+        <relativePath></relativePath>
+    </parent>
+
     <artifactId>openepcis-model-build</artifactId>
     <packaging>pom</packaging>
     <name>openepcis-model-build</name>
@@ -56,21 +61,6 @@
         <module>epcis</module>
     </modules>
 
-    <properties>
-        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-    </properties>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>${maven-deploy-plugin.version}</version>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     <repositories>
         <!-- sonatype snapshots -->
         <repository>
