--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -53,6 +53,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.openepcis</groupId>
+            <artifactId>openepcis-epcis-constants</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
