--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -57,6 +57,10 @@
             <artifactId>openepcis-epcis-constants</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.openepcis</groupId>
+            <artifactId>openepcis-model-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
