adjust dependencies for jakarta EE now being provided by Quarkus 3

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -69,6 +69,7 @@
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
             <artifactId>jakarta.xml.bind-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
