--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,7 @@
     <parent>
         <groupId>io.openepcis</groupId>
         <artifactId>openepcis-bom</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath></relativePath>
+        <version>0.9.1</version>
     </parent>
 
     <artifactId>openepcis-model-build</artifactId>
@@ -86,7 +85,7 @@
             <dependency>
                 <groupId>io.openepcis</groupId>
                 <artifactId>openepcis-epc-digitallink-translator</artifactId>
-                <version>${openepcis.github.version}</version>
+                <version>${project.version}</version>
                 <scope>compile</scope>
             </dependency>
         </dependencies>
