--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>io.openepcis</groupId>
         <artifactId>openepcis-model-build</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.9.2</version>
     </parent>
     <artifactId>openepcis-model-rest</artifactId>
     <description>OpenEPCIS Basic REST Model</description>
