--- a/epcis/pom.xml
+++ b/epcis/pom.xml
@@ -55,7 +55,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <openepcis.github.version>1.0.0-SNAPSHOT</openepcis.github.version>
     </properties>
 
     <dependencies>
@@ -125,6 +124,12 @@
     </dependencies>
 
     <repositories>
+        <!-- sonatype releases -->
+        <repository>
+            <id>sonatype-releases</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/releases</url>
+        </repository>
+        <!-- sonatype snapshots -->
         <repository>
             <id>sonatype-staging</id>
             <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
