--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,8 @@
         <module>rest</module>
         <module>core</module>
         <module>epcis</module>
+        <module>quarkus/runtime</module>
+        <module>quarkus/deployment</module>
     </modules>
 
     <dependencyManagement>
@@ -81,6 +83,11 @@
             <dependency>
                 <groupId>io.openepcis</groupId>
                 <artifactId>openepcis-model-epcis</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.openepcis.quarkus</groupId>
+                <artifactId>quarkus-openepcis-model</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
