fix Quarkus build

--- a/epcis/pom.xml
+++ b/epcis/pom.xml
@@ -111,13 +111,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>io.quarkus.resteasy.reactive</groupId>
-            <artifactId>resteasy-reactive</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus.resteasy.reactive</groupId>
-            <artifactId>resteasy-reactive-common</artifactId>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest</artifactId>
             <scope>provided</scope>
         </dependency>
 
