--- a/quarkus/deployment/pom.xml
+++ b/quarkus/deployment/pom.xml
@@ -75,6 +75,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-devservices-deployment</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-deployment</artifactId>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
