--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -91,13 +91,13 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>io.quarkus.resteasy.reactive</groupId>
-            <artifactId>resteasy-reactive</artifactId>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.quarkus.resteasy.reactive</groupId>
-            <artifactId>resteasy-reactive-common</artifactId>
+            <artifactId>resteasy-reactive</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
